Start fixing toggle on mobile

--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --mode: red;
+}
+
 html {
     min-height: 100%;
     /* height: 100vmax; */
@@ -6,7 +10,8 @@ html {
 body {
     margin: 0px;
     height: 100%;
-    background-color: #181818;
+    /* background-color: #181818; */
+    background-color: var(--mode);
 }
 
 div#whatever {
@@ -15,7 +20,7 @@ div#whatever {
     font-family: Arial, sans-serif;
 }
 
-#sidebar {
+#sidebar[open="true"] {
     display: block;
     height: 100%;
     color: white;
@@ -23,6 +28,11 @@ div#whatever {
     padding: 2vh;
     float: left;
     box-sizing: border-box;
+}
+
+#sidebar[open="false"] {
+    padding: 0;
+    height: auto;
 }
 
 #sidebar div {
@@ -92,12 +102,16 @@ article {
 }
 
 @media screen and (max-width: 515px) {
+    :root {
+        --mode: red;
+    }
+
     #sidebar {
         /* width: 100%; */
         width: 5%;
         font-size: 2em;
-        padding: 0;
-        height: auto;
+        /* padding: 0;
+        height: auto; */
 
         button {
             width: 100%;
@@ -128,6 +142,10 @@ article {
 }
 
 @media screen and (min-width: 516px) and (max-width: 680px) {
+    :root {
+        --mode: orange;
+    }
+
     #sidebar {
         width: 30%;
         font-size: 1.5em;
@@ -152,6 +170,10 @@ article {
 }
 
 @media screen and (min-width: 681px) {
+    :root {
+        --mode: green;
+    }
+
     #sidebar {
         width: 20%;
         font-size: 24px;
